tests/neg/i9568.check
-- Error: tests/neg/i9568.scala:13:10 ----------------------------------------------------------------------------------
13 |  blaMonad.foo(bla) // error: diverges
   |          ^
   |          no implicit argument of type => Monad[F] was found for parameter ev of method blaMonad in object Test.
   |          I found:
   |
   |              Test.blaMonad[Nothing, S](Test.blaMonad[F, S])
   |
   |          But method blaMonad in object Test does not match type => Monad[Nothing].
